fix chevron display on mobile

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -3,6 +3,7 @@
   --orange: rgb(255, 120, 0);
   --animation-timing: 1.25s;
   --animation-repeat: 1;
+  --chevron-size: 100px;
 }
 
 .Banner {
@@ -27,8 +28,8 @@
   bottom: 5rem;
   left: 50%;
   transform: translateX(-50%);
-  width: auto;
-  height: auto;
+  width: var(--chevron-size);
+  height: var(--chevron-size);
   z-index: -1;
 }
 
@@ -38,7 +39,7 @@
   text-align: center;
   padding: 0.5rem 0;
   margin-bottom: 6px;
-  width: 100px;
+  width: var(--chevron-size);
   top: 0;
   transition: all 0.2s ease-out;
 }
@@ -72,25 +73,29 @@
 .chevron.purple:before,
 .chevron.purple:after {
   background: var(--palette-special--least-prominent);
-  animation: bounce var(--animation-timing) ease-out var(--animation-repeat) 0.2s;
+  animation: bounce var(--animation-timing) ease-out var(--animation-repeat)
+    0.2s;
 }
 
 .chevron.lt-purple:before,
 .chevron.lt-purple:after {
   background: var(--palette-special--more-prominent);
-  animation: bounce var(--animation-timing) ease-out var(--animation-repeat) 0.4s;
+  animation: bounce var(--animation-timing) ease-out var(--animation-repeat)
+    0.4s;
 }
 
 .chevron.red:before,
 .chevron.red:after {
   background: var(--red);
-  animation: bounce var(--animation-timing) ease-out var(--animation-repeat) 0.6s;
+  animation: bounce var(--animation-timing) ease-out var(--animation-repeat)
+    0.6s;
 }
 
 .chevron.orange:before,
 .chevron.orange:after {
   background: var(--orange);
-  animation: bounce var(--animation-timing) ease-out var(--animation-repeat) 0.8s;
+  animation: bounce var(--animation-timing) ease-out var(--animation-repeat)
+    0.8s;
 }
 /* hover style */
 .Banner--icon:hover .chevron.purple,
